--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-mini-preview",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~1.0.1",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.8.1",
     "grunt-contrib-cssmin": "^0.12.2"
